Added new messages
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@262 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/plugin_it.properties
@@ -36,13 +36,20 @@ actions.showStockwatch=Mostra Tabellone Titoli
 actions.showNews=Mostra Notizie
 actions.showIndices=Mostra Indici
 actions.delete=Elimina
-AccumulationDistributionChart.label=Accumulazione/Distribuzione
-BollingerBandsChart.label=Bande di Bollinger
-AverageChart.label=Media Mobile
-RSIChart.label=R.S.I.
-StochasticChart.label=Oscillatore Stocastico
-TrendChart.label=Andamento
-DirectionalMovementIndex.label=Directional Movement Index
-AverageTrueRange.label=Average True Range
-CommodityChannelIndex.label=Commodity Channel Index
-DetrendedPriceOscillator.label=Detrended Price Oscillator
+TrendChart.label=Andamento - TREND
+AccumulationDistributionChart.label=Accumulation Distribution - AD
+AverageChart.label=Moving Average - MA
+AverageTrueRange.label=Average True Range - ATR
+BollingerBandsChart.label=Bollinger Bands - BB
+CommodityChannelIndex.label=Commodity Channel Index - CCI
+DetrendedPriceOscillator.label=Detrended Price Oscillator - DPO
+DirectionalMovementIndex.label=Directional Movement Index - DMI
+MACD.label=Moving Average Convergence Divergence - MACD
+MarketThermometerChart.label=Elder's Market Thermometer - THERM
+MAOSC.label=Moving Avergate Oscillator - MAOSC
+RSIChart.label=Relative Strength Index - RSI
+SafezoneStop.label=Elder's Safezone Stop - SZ
+StockChart.label=Symbol - SYMBOL
+StochasticChart.label=Stochastic - STOCH
+ForceIndex.label=Force Index - FI
+VolumeTrends.label=Volume Trends - VT
