--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
@@ -44,10 +44,10 @@ ChartParametersDialog.belowSelectedZone=Below the selected zone
 ChartParametersDialog.color=Color
 ChartParametersDialog.description=Parameters definition
 ChartParametersDialog.insertIndicator=Insert indicator
-ChartParametersDialog.message=Set parameters for
+ChartParametersDialog.message=Set parameters for\u0020
 ChartParametersDialog.name=Name
 ChartParametersDialog.selectedZone=On the selected zone
-ChartParametersDialog.title=Parameters
+ChartParametersDialog.title=Parameters\u0020
 ChartView.Change=Chg.:
 ChartView.ConfirmDeleteMessage=Do you really want to delete the selected chart ?
 ChartView.ConfirmDeleteTitle=Confirm Delete
@@ -154,3 +154,38 @@ TrendChart.periods=Selected Periods
 VolumeChart.label=Volume
 ZonePage.description=Select the zone where the indicator should be placed
 ZonePage.title=Indicator zone
+MAOSCChart.label=MAOSC
+MAOSCChart.fastPeriod=Fast Period
+MAOSCChart.slowPeriod=Slow Period
+StockChart.label=SYMBOL
+MarketThermometerChart.label=Market Thermometer
+MarketThermometerChart.threshold=Threshold
+MarketThermometerChart.period=Period
+MarketThermometerChart.maType=Moving Average Type
+MarketThermometerChart.smoothingPeriod=Smoothing Period
+MarketThermometerChart.smoothingType=Smoothing Type
+SafezoneStop.label=Safezone Stop
+SafezoneStop.position=Position
+SafezoneStop.long=Long
+SafezoneStop.short=Short
+SafezoneStop.noDeclinePeriod=No Decline Period
+SafezoneStop.loopbackPeriod=Lookback Period
+SafezoneStop.coefficient=Coefficient
+MACDChart.label=MACD
+MACDChart.fastPeriod=Fast Period
+MACDChart.slowPeriod=Slow Period
+MACDChart.signalPeriod=Signal Period
+MACDChart.averageType=Average Type
+MACDChart.signalColor=Signal Line Color
+MACDChart.oscillatorColor=Oscillator Line Color
+MAOSCChart.fastAverageType=Fast Average Type
+MAOSCChart.slowAverageType=Slow Average Type
+ForceIndex.label=Force Index
+ForceIndex.smoothingPeriod=Smoothing Period
+ForceIndex.averageType=Smoothing Average Type
+VolumeTrends.label=Volume Trends - VT
+VolumeTrends.method=Method
+VolumeTrends.nvi=Negative Volume Index - NVI
+VolumeTrends.obv=On Balance Volume - OBV
+VolumeTrends.pvi=Positive Volume Index - PVI
+VolumeTrends.pvt=Positive Volume Trend - PVT
