--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages_it.properties
@@ -44,10 +44,10 @@ ChartParametersDialog.belowSelectedZone=Sotto la zona selezionata
 ChartParametersDialog.color=Colore
 ChartParametersDialog.description=Definizione parametri
 ChartParametersDialog.insertIndicator=Inserisci indicatore
-ChartParametersDialog.message=Impostazione parametri per
+ChartParametersDialog.message=Impostazione parametri per\u0020
 ChartParametersDialog.name=Nome
 ChartParametersDialog.selectedZone=Nella zona selezionata
-ChartParametersDialog.title=Parametri
+ChartParametersDialog.title=Parametri\u0020
 ChartView.Change=Var.:
 ChartView.ConfirmDeleteMessage=Vuoi veramente eliminare il grafico selezionato ?
 ChartView.ConfirmDeleteTitle=Conferma Cancellazione
@@ -154,3 +154,38 @@ TrendChart.periods=Periodi Selezionati
 VolumeChart.label=Volume
 ZonePage.description=Selezionare la zona in cui inserire l'indicatore
 ZonePage.title=Zona Indicatore
+MAOSCChart.label=MAOSC
+MAOSCChart.fastPeriod=Fast Period
+MAOSCChart.slowPeriod=Slow Period
+StockChart.label=SYMBOL
+MarketThermometerChart.label=Market Thermometer
+MarketThermometerChart.threshold=Threshold
+MarketThermometerChart.period=Period
+MarketThermometerChart.maType=Moving Average Type
+MarketThermometerChart.smoothingPeriod=Smoothing Period
+MarketThermometerChart.smoothingType=Smoothing Type
+SafezoneStop.label=Safezone Stop
+SafezoneStop.position=Position
+SafezoneStop.long=Long
+SafezoneStop.short=Short
+SafezoneStop.noDeclinePeriod=No Decline Period
+SafezoneStop.loopbackPeriod=Lookback Period
+SafezoneStop.coefficient=Coefficient
+MACDChart.label=MACD
+MACDChart.fastPeriod=Fast Period
+MACDChart.slowPeriod=Slow Period
+MACDChart.signalPeriod=Signal Period
+MACDChart.averageType=Average Type
+MACDChart.signalColor=Signal Line Color
+MACDChart.oscillatorColor=Oscillator Line Color
+MAOSCChart.fastAverageType=Fast Average Type
+MAOSCChart.slowAverageType=Slow Average Type
+ForceIndex.label=Force Index
+ForceIndex.smoothingPeriod=Smoothing Period
+ForceIndex.averageType=Smoothing Average Type
+VolumeTrends.label=Volume Trends - VT
+VolumeTrends.method=Methodo
+VolumeTrends.nvi=Negative Volume Index - NVI
+VolumeTrends.obv=On Balance Volume - OBV
+VolumeTrends.pvi=Positive Volume Index - PVI
+VolumeTrends.pvt=Positive Volume Trend - PVT
