*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@295 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui.views/src/net/sourceforge/eclipsetrader/ui/internal/views/messages.properties
@@ -91,7 +91,7 @@ IndicesPreferencePage.makeBoxEqual=Make boxes equally sized
 IndicesPreferencePage.negativeValueColor=Negative Value Color
 IndicesPreferencePage.positiveValueColor=Positive Value Color
 IndicesPreferencePage.textForeground=Text Color
-NewIndicatorWizard.title=Aggiunta Indicatore
+NewIndicatorWizard.title=Add Indicator
 NewsView.1=Date
 NewsView.2=Title
 NewsView.3=Source
