Added CSV Data export wizard
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@664 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/ui/internal/messages.properties
+++ b/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/ui/internal/messages.properties
@@ -22,13 +22,18 @@ SecurityPage_Title=Security Description
 SecuritiesView_Description=Description
 SecurityWizard_QuoteFeedTitle=Quote Feed
 SecurityPage_CurrencyColumn=Currency
+ExportSelectionPage_Last=Last prices
 SecurityWizard_Level2FeedTitle=Level II Quote Feed
 SecurityPage_DescriptionColumn=Description
 SecurityPropertiesDialog_Title=Properties for 
+ExportSelectionPage_Selected=Select the securities to export:
+ExportSelectionPage_intraday=Intraday prices
 SecurityPropertiesDialog_Code=Code
 SecurityWizard_HistoryFeedTitle=History Feed
+ExportSelectionPage_FileLabel=File name:
 SecuritiesView_Currency=Currency
 SecurityPage_Description=Set the security code and description
+ExportSelectionPage_All=Export all
 SecurityPage_CodeColumn=Code
 DeleteSecurityAction_Title=Security
 DeleteSecurityAction_Message=Do you really want to delete the selected security ?
@@ -40,10 +45,15 @@ SecurityPropertiesDialog_Description=Description
 SecurityPropertiesDialog_HistoryPage=History
 SecurityWizard_HistoryFeedDescription=Set the security feed for history data
 SecurityPropertiesDialog_ClearHistory=Clear historical data
+ExportSelectionPage_FileDialogTitle=Export to File
 SecurityPropertiesDialog_ClearIntraday=Clear intraday data
+ExportSelectionPage_DestinationLabel=Select the export destination:
 SecurityWizard_IntradayChartsTitle=Intraday Charts
 SecurityPropertiesDialog_Currency=Currency
+ExportSelectionPage_SelectLabel=Select the data to export:
+ExportSelectionPage_Historical=Historical prices
 SecurityPropertiesDialog_QuotePage=Quote
+ExportSelectionPage_BrowseButton=Browse...
 SecurityWizard_IntradayChartsDescription=Set the options to automatically build intraday charts
 SecurityPropertiesDialog_IntradayChartsPage=Intraday Charts
 FeedOptions_Feed=Feed
@@ -61,3 +71,10 @@ IntradayDataOptions_Thu=Thu
 IntradayDataOptions_Fri=Fri
 IntradayDataOptions_Sat=Sat
 IntradayDataOptions_KeepDays=Keep (days)
+CSVExport_Title=Export CSV Data
+CSVExport_Description=Export CSV data to the local filesystem.
+CSVExport_JobName=CSV Export
+CSVExport_LastTask=Export last prices
+CSVExport_ErrorMessage=Error exporting data
+CSVExport_HistoricalTask=Export historical prices
+CSVExport_IntradayTask=Export intraday prices
