--- a/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/ui/internal/messages.properties
+++ b/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/ui/internal/messages.properties
@@ -23,17 +23,21 @@ SecuritiesView_Description=Description
 SecurityWizard_QuoteFeedTitle=Quote Feed
 SecurityPage_CurrencyColumn=Currency
 ExportSelectionPage_Last=Last prices
+ExchangeRateDialog_Title=Exchange Rate
 SecurityWizard_Level2FeedTitle=Level II Quote Feed
 SecurityPage_DescriptionColumn=Description
 SecurityPropertiesDialog_Title=Properties for 
 ExportSelectionPage_Selected=Select the securities to export:
 ExportSelectionPage_intraday=Intraday prices
+ExchangeRateDialog_DefaultTo=EUR
 SecurityPropertiesDialog_Code=Code
 SecurityWizard_HistoryFeedTitle=History Feed
+SecurityWizard_TradeSourceTitle=Trading
 ExportSelectionPage_FileLabel=File name:
 SecuritiesView_Currency=Currency
 SecurityPage_Description=Set the security code and description
 ExportSelectionPage_All=Export all
+ExchangeRateDialog_Date=Date
 SecurityPage_CodeColumn=Code
 DeleteSecurityAction_Title=Security
 DeleteSecurityAction_Message=Do you really want to delete the selected security ?
@@ -44,6 +48,7 @@ SecurityPropertiesDialog_GeneralPage=General
 SecurityPropertiesDialog_Description=Description
 SecurityPropertiesDialog_HistoryPage=History
 SecurityWizard_HistoryFeedDescription=Set the security feed for history data
+SecurityWizard_TradeSourceDescription=Set the trading options
 SecurityPropertiesDialog_ClearHistory=Clear historical data
 ExportSelectionPage_FileDialogTitle=Export to File
 SecurityPropertiesDialog_ClearIntraday=Clear intraday data
@@ -52,10 +57,12 @@ SecurityWizard_IntradayChartsTitle=Intraday Charts
 SecurityPropertiesDialog_Currency=Currency
 ExportSelectionPage_SelectLabel=Select the data to export:
 ExportSelectionPage_Historical=Historical prices
+ExchangeRateDialog_DefaultFrom=USD
 SecurityPropertiesDialog_QuotePage=Quote
 ExportSelectionPage_BrowseButton=Browse...
 SecurityWizard_IntradayChartsDescription=Set the options to automatically build intraday charts
 SecurityPropertiesDialog_IntradayChartsPage=Intraday Charts
+SecurityPropertiesDialog_TradeSourceTitle=Trading
 FeedOptions_Feed=Feed
 FeedOptions_Exchange=Exchange
 FeedOptions_Symbol=Symbol
@@ -78,3 +85,42 @@ CSVExport_LastTask=Export last prices
 CSVExport_ErrorMessage=Error exporting data
 CSVExport_HistoricalTask=Export historical prices
 CSVExport_IntradayTask=Export intraday prices
+DividendsPage_Title=Dividends
+DividendsPage_Date=Date
+DividendsPage_Value=Value
+DividendsPage_Add=Add
+DividendsPage_Delete=Delete
+SplitsPage_Title=Splits
+SplitsPage_Date=Date
+SplitsPage_From=From
+SplitsPage_To=To
+SplitsPage_Add=Add
+SplitsPage_Delete=Delete
+LoggerPreferencesPage_WriteToConsole=Write to console
+LoggerPreferencesPage_WriteToFile=Write to file
+LoggerPreferencesPage_Format=Format
+LoggerPreferencesPage_Default=Default
+LoggerPreferencesPage_Levels=Levels
+LoggerPreferencesPage_General=General
+LoggerPreferencesPage_Off=Off
+LoggerPreferencesPage_Fatal=Fatal
+LoggerPreferencesPage_Error=Error
+LoggerPreferencesPage_Warn=Warn
+LoggerPreferencesPage_Info=Info
+LoggerPreferencesPage_Debug=Debug
+LoggerPreferencesPage_All=All
+ProxyPreferencePage_Settings=Proxy settings
+ProxyPreferencePage_EnableHTTP=Enable HTTP proxy connection
+ProxyPreferencePage_HostAddress=HTTP proxy host address
+ProxyPreferencePage_HostPort=HTTP proxy host port
+ProxyPreferencePage_PortErrorMessage=Port must be a number in the range 0-65535
+TradeSourceOptions_Provider=Trading provider
+TradeSourceOptions_Exchange=Exchange
+TradeSourceOptions_Symbol=Symbol
+TradeSourceOptions_Account=Account
+TradeSourceOptions_Quantity=Quantity
+DataPreferencesPage_HistoryRange=Security history range (in years)
+DataPreferencesPage_HistoryRangeTooltip=Max range used for the first download of a security historical prices.
+DataPreferencesPage_HistoryRangeError=The range should be an integer between 1 and 50.
+ExchangeRateDialog_To=to
+ExchangeRateDialog_Equals==
