Fix indicators autoscale flag
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@831 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts/src/net/sourceforge/eclipsetrader/charts/indicators/messages.properties
+++ b/net.sourceforge.eclipsetrader.charts/src/net/sourceforge/eclipsetrader/charts/indicators/messages.properties
@@ -200,3 +200,4 @@ VTPreferencePage_NVI=NVI
 VTPreferencePage_OBV=OBV
 VTPreferencePage_PVI=PVI
 VTPreferencePage_PVT=PVT
+IndicatorPreferences_ScaleFlag=Set own scale
