Added orders cleanup functions and preferences
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@851 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/ui/internal/messages.properties
+++ b/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/ui/internal/messages.properties
@@ -122,7 +122,7 @@ TradeSourceOptions_Exchange=Exchange
 TradeSourceOptions_Symbol=Symbol
 TradeSourceOptions_Account=Account
 TradeSourceOptions_Quantity=Quantity
-DataPreferencesPage_HistoryRange=Security history range (in years)
+DataPreferencesPage_HistoryRange=Security history range
 DataPreferencesPage_HistoryRangeTooltip=Max range used for the first download of a security historical prices.
 DataPreferencesPage_HistoryRangeError=The range should be an integer between 1 and 50.
 ExchangeRateDialog_To=to
