[news] Externalized strings
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@938 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/dialogs/messages.properties
+++ b/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/dialogs/messages.properties
@@ -9,5 +9,6 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-EarlyStartup_JobName=News update
-EarlyStartup_TaskName=Updating news
+RSSFeedDialog_Title=RSS Feed
+RSSFeedDialog_Source=Source
+RSSFeedDialog_URL=URL
