--- a/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/messages.properties
+++ b/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/messages.properties
@@ -9,5 +9,4 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-EarlyStartup_JobName=News update
-EarlyStartup_TaskName=Updating news
+NewsPlugin_BrowserTitle=News Browser
