--- a/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/preferences/messages.properties
+++ b/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/preferences/messages.properties
@@ -9,5 +9,14 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-EarlyStartup_JobName=News update
-EarlyStartup_TaskName=Updating news
+NewsPreferencesPage_StartupUpdate=Update on startup
+NewsPreferencesPage_FollowQuoteFeed=Follow quote feed running status
+NewsPreferencesPage_DaysToKeep=Days to keep
+NewsPreferencesPage_Provider=Provider
+RSSPreferencesPage_AutoUpdate=Automatic update every
+RSSPreferencesPage_Minutes=minutes
+RSSPreferencesPage_Source=Source
+RSSPreferencesPage_URL=URL
+RSSPreferencesPage_Add=Add
+RSSPreferencesPage_Edit=Edit
+RSSPreferencesPage_Remove=Remove
