--- a/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/providers/messages.properties
+++ b/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/providers/messages.properties
@@ -9,5 +9,5 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-EarlyStartup_JobName=News update
-EarlyStartup_TaskName=Updating news
+RSSNewsProvider_JobName=RSS News
+RSSNewsProvider_TaskName=Fetching RSS News
