--- a/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/views/messages.properties
+++ b/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/views/messages.properties
@@ -9,5 +9,11 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-EarlyStartup_JobName=News update
-EarlyStartup_TaskName=Updating news
+NewsView_Date=Date
+NewsView_Title=Title
+NewsView_Security=Security
+NewsView_UpdateAction=Update
+NewsView_NextAction=Next
+NewsView_PreviousAction=Previous
+NewsStartupJob_JobName=News Startup
+NewsView_Source=Source
