[ta-lib] Completed strings externalization
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@940 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ta-lib/src/net/sourceforge/eclipsetrader/ta_lib/indicators/messages.properties
+++ b/net.sourceforge.eclipsetrader.ta-lib/src/net/sourceforge/eclipsetrader/ta_lib/indicators/messages.properties
@@ -95,15 +95,21 @@ MACD_SlowMAType=Slow MA Type
 MA_Color=Color
 MA_Label=Label
 MA_UseOwnScale=Use own scale
+MA_Exponential=Exponential
 MA_LineType=Line Type
+MA_Weighted=Weighted
 MA_Input=Input
 MA_Period=Period
+MA_Simple=Simple
 MA_Type=Type
 MACD_DefaultLabel=MACD
 MACD_DefaultLabelSIG=SIG
+MA_DoubleExponential=Double Exponential
+MA_TripleExponential=Triple Exponential
 MACD_Color=Color
 MACD_Label=Label
 MACD_LineType=Line Type
+MA_Triangular=Triangular
 MACD_SignalColor=Signal Color
 MACD_SignalLabel=Signal Label
 MACD_SignalLineType=Signal Line Type
@@ -213,3 +219,4 @@ ULTOSC_LineType=Line Type
 ULTOSC_ShortPeriod=Short Period
 ULTOSC_MediumPeriod=Medium Period
 ULTOSC_LongPeriod=Long Period
+MA_KaufmanAdaptive=Kaufman Adaptive
