[directaworld] Completed strings externalization
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@941 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.directaworld/src/net/sourceforge/eclipsetrader/directaworld/wizards/messages.properties
+++ b/net.sourceforge.eclipsetrader.directaworld/src/net/sourceforge/eclipsetrader/directaworld/wizards/messages.properties
@@ -9,12 +9,11 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-Bundle-Vendor = Sourceforge.net
-Bundle-Name = DirectaWorldactionSet.label.0 = DirectaWorld
-
-feed.id = net.sourceforge.eclipsetrader.directaworld
-feed.name = DirectaWorld
-
-actionSet.label = DirectaWorld
-action.label = Italian Stock Security
-preferencePage.name = DirectaWorld
+SecurityPage_Title=Security
+SecurityPage_Description=Select one of the available securities
+SecurityPage_CodeColumn=Code
+SecurityPage_DescriptionColumn=Description
+SecurityWizard_IntradayChartsTitle=Intraday Charts
+SecurityPage_Search=Search
+SecurityWizard_Title=Italian Security Wizard
+SecurityWizard_IntradayChartsDescription=Set the options to automatically build intraday charts
