--- a/net.sourceforge.eclipsetrader.directaworld/src/net/sourceforge/eclipsetrader/directaworld/messages.properties
+++ b/net.sourceforge.eclipsetrader.directaworld/src/net/sourceforge/eclipsetrader/directaworld/messages.properties
@@ -1,3 +1,14 @@
+###############################################################################
+# Copyright (c) 2004-2007 Marco Maccaferri and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#     Marco Maccaferri - initial API and implementation
+###############################################################################
+
 GeneralPreferencesPage_UserName=User Code
 GeneralPreferencesPage_Password=Password
 GeneralPreferencesPage_WarningMessage=Warning\! Passwords are saved in clear text.
@@ -7,11 +18,3 @@ LoginDialog_Password=Password:
 LoginDialog_SavePassword=Save Password
 LoginDialog_Title=Realtime Server Login
 LoginDialog_Description=Please enter your user code and password
-SecurityPage_Title=Security
-SecurityPage_Description=Select one of the available securities
-SecurityPage_CodeColumn=Code
-SecurityPage_DescriptionColumn=Description
-SecurityWizard_IntradayChartsTitle=Intraday Charts
-SecurityPage_Search=Search
-SecurityWizard_Title=Italian Security Wizard
-SecurityWizard_IntradayChartsDescription=Set the options to automatically build intraday charts
