[news] Added Italian translation
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@952 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/dialogs/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/dialogs/messages_it.properties
@@ -9,14 +9,6 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-NewsPreferencesPage_StartupUpdate=Update on startup
-NewsPreferencesPage_FollowQuoteFeed=Follow quote feed running status
-NewsPreferencesPage_DaysToKeep=Days to keep
-NewsPreferencesPage_Provider=Providers
-RSSPreferencesPage_AutoUpdate=Automatic update every
-RSSPreferencesPage_Minutes=minutes
-RSSPreferencesPage_Source=Source
-RSSPreferencesPage_URL=URL
-RSSPreferencesPage_Add=Add
-RSSPreferencesPage_Edit=Edit
-RSSPreferencesPage_Remove=Remove
+RSSFeedDialog_Title=Sorgente RSS
+RSSFeedDialog_Source=Agenzia
+RSSFeedDialog_URL=URL
