--- a/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/preferences/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/preferences/messages_it.properties
@@ -9,14 +9,14 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-NewsPreferencesPage_StartupUpdate=Update on startup
-NewsPreferencesPage_FollowQuoteFeed=Follow quote feed running status
-NewsPreferencesPage_DaysToKeep=Days to keep
-NewsPreferencesPage_Provider=Providers
-RSSPreferencesPage_AutoUpdate=Automatic update every
-RSSPreferencesPage_Minutes=minutes
-RSSPreferencesPage_Source=Source
+NewsPreferencesPage_StartupUpdate=Aggiornare alla partenza
+NewsPreferencesPage_FollowQuoteFeed=Segue lo stato della ricezione quotazioni
+NewsPreferencesPage_DaysToKeep=Giorni da mantenere
+NewsPreferencesPage_Provider=Sorgenti
+RSSPreferencesPage_AutoUpdate=Aggiorna automaticamente ogni 
+RSSPreferencesPage_Minutes=minuti
+RSSPreferencesPage_Source=Sorgente
 RSSPreferencesPage_URL=URL
-RSSPreferencesPage_Add=Add
-RSSPreferencesPage_Edit=Edit
-RSSPreferencesPage_Remove=Remove
+RSSPreferencesPage_Add=Aggiungi
+RSSPreferencesPage_Edit=Modifica
+RSSPreferencesPage_Remove=Elimina
