--- a/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/providers/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/providers/messages_it.properties
@@ -9,14 +9,5 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-NewsPreferencesPage_StartupUpdate=Update on startup
-NewsPreferencesPage_FollowQuoteFeed=Follow quote feed running status
-NewsPreferencesPage_DaysToKeep=Days to keep
-NewsPreferencesPage_Provider=Providers
-RSSPreferencesPage_AutoUpdate=Automatic update every
-RSSPreferencesPage_Minutes=minutes
-RSSPreferencesPage_Source=Source
-RSSPreferencesPage_URL=URL
-RSSPreferencesPage_Add=Add
-RSSPreferencesPage_Edit=Edit
-RSSPreferencesPage_Remove=Remove
+RSSNewsProvider_JobName=Notizie RSS
+RSSNewsProvider_TaskName=Lettura Notizie RSS
