--- a/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/views/messages_it.properties
+++ b/net.sourceforge.eclipsetrader.news/src/net/sourceforge/eclipsetrader/news/views/messages_it.properties
@@ -9,14 +9,11 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-NewsPreferencesPage_StartupUpdate=Update on startup
-NewsPreferencesPage_FollowQuoteFeed=Follow quote feed running status
-NewsPreferencesPage_DaysToKeep=Days to keep
-NewsPreferencesPage_Provider=Providers
-RSSPreferencesPage_AutoUpdate=Automatic update every
-RSSPreferencesPage_Minutes=minutes
-RSSPreferencesPage_Source=Source
-RSSPreferencesPage_URL=URL
-RSSPreferencesPage_Add=Add
-RSSPreferencesPage_Edit=Edit
-RSSPreferencesPage_Remove=Remove
+NewsView_Date=Data
+NewsView_Title=Titolo
+NewsView_Security=Azienda
+NewsView_UpdateAction=Aggiorna
+NewsView_NextAction=Successiva
+NewsView_PreviousAction=Precedente
+NewsStartupJob_JobName=Initializzazione Notizie
+NewsView_Source=Agenzia
