[core] Completed strings externalization
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@953 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/messages.properties
+++ b/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/messages.properties
@@ -9,7 +9,5 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-DeleteAction_ConfirmTitle=Security
-DeleteAction_ConfirmMessage=Do you really want to delete the selected securities ?
-DeleteAction_Text=&Delete
-CopyAction_Text=&Copy
+CurrencyConverter_UpdatingTaskName=Updating currencies
+CurrencyConverter_NA=N/A
