--- a/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/ui/actions/messages.properties
+++ b/net.sourceforge.eclipsetrader.core/src/net/sourceforge/eclipsetrader/core/ui/actions/messages.properties
@@ -9,7 +9,7 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
-DeleteAction_ConfirmTitle=Security
-DeleteAction_ConfirmMessage=Do you really want to delete the selected securities ?
-DeleteAction_Text=&Delete
-CopyAction_Text=&Copy
+DeleteSecurityAction_Title=Security
+DeleteSecurityAction_Message=Do you really want to delete the selected security ?
+RefreshCurrenciesAction_JobName=Update currencies
+PropertiesAction_Text=P&roperties
