[yahoo] Added securities list import wizard
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@954 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.yahoo/src/net/sourceforge/eclipsetrader/yahoo/wizards/messages.properties
+++ b/net.sourceforge.eclipsetrader.yahoo/src/net/sourceforge/eclipsetrader/yahoo/wizards/messages.properties
@@ -24,6 +24,7 @@ FrenchSecurityPage_DescriptionColumnName=Description
 FrenchSecurityPage_Search=Search
 SecurityWizard_WizardTitle=U.S. Security Wizard
 SecurityPage_Description=Select one of the available securities
+SecurityPage_ErrorMessage=Unexpected error while reading securities
 SecurityPage_CodeColumnName=Code
 SecurityWizard_GermanWizardTitle=German Security Wizard
 SecurityWizard_FranceWizardTitle=France Security Wizard
