[ui] Security explorer content provider fixes and strings externalization
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@972 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui/src/net/sourceforge/eclipsetrader/internal/ui/dialogs/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui/src/net/sourceforge/eclipsetrader/internal/ui/dialogs/messages.properties
@@ -9,3 +9,10 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
+CreateSecurityGroupDialog_ShellTitle=Create Group
+CreateSecurityGroupDialog_DialogTitle=Group
+CreateSecurityGroupDialog_Description=Create a new group.
+CreateSecurityGroupDialog_SelectParentGroup=Select the parent group:
+CreateSecurityGroupDialog_GroupName=Group name:
+CreateSecurityGroupDialog_EmptyNameMessage=The 'group' name is empty
+CreateSecurityGroupDialog_ExistingNameMessage=The same name already exists
