--- a/net.sourceforge.eclipsetrader.ui/src/net/sourceforge/eclipsetrader/internal/ui/views/explorer/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui/src/net/sourceforge/eclipsetrader/internal/ui/views/explorer/messages.properties
@@ -9,3 +9,18 @@
 #     Marco Maccaferri - initial API and implementation
 ###############################################################################
 
+SecurityExplorer_CreateGroupAction=Create Group...
+SecurityExplorer_ExpandAllAction=Expand all
+SecurityExplorer_CollapseAllAction=Collapse all
+SecurityExplorer_LinkSelectionAction=Link with selection
+SecurityExplorer_DeleteAction=Delete
+GroupsPresentationAction_Label=Groups Presentation
+GroupsPresentationAction_FlatLabel=Flat
+GroupsPresentationAction_HierarchicalLabel=Hierarchical
+BulkChangesAction_Label=Change
+BulkChangesAction_QuoteFeedLabel=Quote Feed
+BulkChangesAction_Level2FeedLabel=Level 2 Feed
+BulkChangesAction_HistoryFeedLabel=History Feed
+BulkChangesAction_IntradayChartLabel=Intraday Charts
+BulkChangesAction_TradingLabel=Trading Provider
+FlatLabelProvider_Separator=\ - 
