[core.ui] Securities view replaced with Securities Explorer view
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@976 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.ui/src/net/sourceforge/eclipsetrader/internal/ui/views/explorer/messages.properties
+++ b/net.sourceforge.eclipsetrader.ui/src/net/sourceforge/eclipsetrader/internal/ui/views/explorer/messages.properties
@@ -24,3 +24,5 @@ BulkChangesAction_HistoryFeedLabel=History Feed
 BulkChangesAction_IntradayChartLabel=Intraday Charts
 BulkChangesAction_TradingLabel=Trading Provider
 FlatLabelProvider_Separator=\ - 
+DeleteSecurityAction_Title=Security
+DeleteSecurityAction_Message=Do you really want to delete the selected security ?
