Updated German translation.
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@997 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.charts.nl1/plugin_de.properties
+++ b/net.sourceforge.eclipsetrader.charts.nl1/plugin_de.properties
@@ -17,11 +17,11 @@ view.chartData.name = Chart Daten
 actionSet.charts.label = Charts
 actionSet.menu.chart.label = Chart
 
-action.deleteChart.label = Chart lï¿½schen
-action.deleteObject.label = Objekt lï¿½schen
+action.deleteChart.label = Chart löschen
+action.deleteObject.label = Objekt löschen
 action.editObject.label = Objekt bearbeiten
 action.newIndicator.label = Neuer Indikator...
-action.openChart.label = Chart ï¿½ffnen
+action.openChart.label = Chart öffnen
 action.updateAllCharts.label = Alle Charts aktualisieren
 action.updateChart.label = Chart aktualisieren
 action.updateChart.tooltip = Chart und Daten aktualisieren
@@ -43,8 +43,8 @@ indicator.ATR.preferencesPage.title = Average True Range
 indicator.BAR.name = Balken - BAR
 indicator.BAR.preferencesPage.title = Bars
 indicator.BAR.preferencesPage.description = Legen die den Balkentyp und die Farben fest
-indicator.BB.name = Bollinger Bï¿½nder - BB
-indicator.BB.preferencesPage.title = Bollinger Bï¿½nder
+indicator.BB.name = Bollinger Bänder - BB
+indicator.BB.preferencesPage.title = Bollinger Bänder
 indicator.CCI.name = Commodity Channel Index - CCI
 indicator.CCI.preferencesPage.title = Commodity Channel Index
 indicator.DMI.name = Directional Movement Index - DMI
@@ -55,14 +55,14 @@ indicator.FI.name = Force Index - FI
 indicator.FI.preferencesPage.title = Force Index
 indicator.LINE.name = Linie - LINE
 indicator.LINE.preferencesPage.title = Linie
-indicator.LINE.preferencesPage.description = Eingabefeld fï¿½r die Linie und die Farbe festlegen
+indicator.LINE.preferencesPage.description = Eingabefeld für die Linie und die Farbe festlegen
 indicator.MACD.name = Moving Average Convergence Divergence - MACD
 indicator.MACD.preferencesPage.title = MACD
 indicator.MACH.name = Moving Average Channels - MACH
 indicator.MACH.preferencesPage.title = Moving Average Channels
 indicator.MA.name = Moving Average - MA
 indicator.MA.preferencesPage.title = Moving Average
-indicator.MA.preferencesPage.description = Legen Sie die Parameter fï¿½r den gleitenden Durchschnitt fest
+indicator.MA.preferencesPage.description = Legen Sie die Parameter für den gleitenden Durchschnitt fest
 indicator.MAOSC.name = Moving Average Oscillator - MAOSC
 indicator.MAOSC.preferencesPage.title = Moving Average Oscillator
 indicator.ROC.name = Rate Of Change - ROC
@@ -77,7 +77,7 @@ indicator.STOCH.name = Stochastik - STOCH
 indicator.STOCH.preferencesPage.title = Stochastik
 indicator.THERM.name = Marktthermometer - THERM
 indicator.THERM.preferencesPage.title = Marktthermometer
-indicator.THERM.preferencesPage.description = Legen Sie die Parameter fï¿½r das Marktthermometer fest
+indicator.THERM.preferencesPage.description = Legen Sie die Parameter für das Marktthermometer fest
 indicator.UO.name = Ultimate Oscillator - UO
 indicator.UO.preferencesPage.title = Ultimate Oscillator
 indicator.VFI.name = Volume Flow Indicator - VFI
